--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,6 @@
 
 .App-header {
   background-color: #282c34;
-  /* min-height: 100vh; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -57,8 +52,8 @@
 footer {
   display: block;
   padding-top: 10%;
-  height: 100%;
-  margin: auto;
+  height: 100px;
+  /* margin: auto; */
   background-color: orange;
   text-align: center;
 }
@@ -68,6 +63,13 @@ footer {
 /* body styling */
 .bodyContainer {
   margin: 5% 7% 5% 7%;
+}
+
+/* About Me */
+img {
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
 }
 
 /* Portfolio */
